# PersonalRatingService

./: LICENSE  README.md
PersonalRating/: build.gradle.kts  gradle.properties  settings.gradle.kts
PersonalRating/src/commonMain/kotlin/annotation/: JsExportWithSuspend.kt
PersonalRating/src/commonMain/kotlin/model/: PersonalRating.kt  PersonalRatingValue.kt  RemoteDataSource.kt  RemoteExpectValue.kt  ShipValue.kt
PersonalRating/src/commonMain/kotlin/service/: RemoteDataService.kt
PersonalRating/src/commonMain/kotlin/usecase/: PersonalRatingCalculator.kt  PersonalRatingReader.kt
PersonalRating/src/jsMain/kotlin/service/: RemoteDataService.kt
PersonalRating/src/jsMain/kotlin/usecase/: PersonalRatingReader.kt
PersonalRating/src/jsMain/kotlin/util/: CoroutineScope.kt
PersonalRating/src/jvmMain/kotlin/usecase/: PersonalRatingReader.kt
PersonalRating/src/nativeMain/kotlin/: NativeCore.kt
PersonalRating/src/nativeMain/kotlin/service/: RemoteDataService.kt
PersonalRating/src/nativeMain/kotlin/usecase/: PersonalRatingReader.kt
examples/: README.md  personal_rating.json
examples/cpp/: .clang-format  CMakeLists.txt  README.md  kotlin.h  main.cpp  reader.h
examples/js/: package.json
examples/nextjs/: package-lock.json  package.json
examples/nextjs/src/app/: calculator.ts  layout.tsx  page.tsx  repo.ts
examples/nodejs/: index.js  package-lock.json
